--- a/style.css
+++ b/style.css
@@ -4,14 +4,65 @@
     box-sizing: border-box;
 }
 
-body{
+body {
 
     margin: 0px 120px;
     font-family: "Fira Sans", serif;
     font-style: normal;
     line-height: normal;
+    background-color: #F1F1F3;
 }
 
+
+/* common styles */
+
+.section-margin {
+    margin-bottom: 80px;
+}
+
+.btn-primary {
+    padding: 15px 30px;
+    border-radius: 8px;
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 600;
+    background: #006A50;
+    border: none;
+}
+
+.btn-primary:hover{
+
+    background-color: crimson;
+}
+
+.section-title {
+    color: #0E0E0E;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 30px;
+}
+
+.card-img {
+    margin-bottom: 8px;
+}
+
+.card-title {
+
+    color: rgba(14, 14, 14, 0.80);
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 8px;
+
+}
+
+.card-description {
+    color: rgba(14, 14, 14, 0.70);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    /* 150% */
+    margin-bottom: 10px;
+}
 
 
 
@@ -25,8 +76,9 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
     margin-bottom: 40px;
+
+
 }
 
 nav h3 {
@@ -53,12 +105,14 @@ nav h3 {
 .banner-section {
     display: flex;
     padding: 80px 100px;
-    justify-content:space-between;
+    justify-content: space-between;
     align-items: center;
 
 
     border-radius: 24px;
     background: #C6E4D6;
+
+
 }
 
 .banner-title-1 {
@@ -78,12 +132,38 @@ nav h3 {
 
 }
 
-.btn-primary {
-    padding: 15px 30px;
-    border-radius: 8px;
-    color: #FFF;
-    font-size: 18px;
-    font-weight: 600;
-    background: #006A50;
-    border: none;
+
+
+
+/* Pillars of Bangladesh Section */
+
+.card-container {
+    display: flex;
+    gap: 25px;
+}
+
+.card {
+    padding: 20px;
+    border-radius: 16px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    background: #FFF;
+
+}
+
+
+/* Visionb of Future */
+.vcard1{
+border: 0px solid #5490F5;
+background: rgba(84, 144, 245, 0.20);
+}
+
+.vcard2{
+border: 0px solid #09A15C;
+background: #C6E4D6;
+
+}
+
+.vcard3{
+border: 0px solid #FFC239;
+background: #F7EBCF;
 }
