--- a/style.css
+++ b/style.css
@@ -6,11 +6,16 @@
 
 body {
 
-    margin: 0px 120px;
+   
     font-family: "Fira Sans", serif;
     font-style: normal;
     line-height: normal;
     background-color: #F1F1F3;
+}
+
+header,
+main{
+    margin: 0px 120px;
 }
 
 
@@ -28,9 +33,10 @@ body {
     font-weight: 600;
     background: #006A50;
     border: none;
+    margin: 15px 0px;
 }
 
-.btn-primary:hover{
+.btn-primary:hover {
 
     background-color: crimson;
 }
@@ -55,13 +61,15 @@ body {
 
 }
 
-.card-description {
+.section-description,
+.card-description,
+.description {
     color: rgba(14, 14, 14, 0.70);
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
     /* 150% */
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 
@@ -152,18 +160,178 @@ nav h3 {
 
 
 /* Visionb of Future */
-.vcard1{
-border: 0px solid #5490F5;
-background: rgba(84, 144, 245, 0.20);
+.vcard1 {
+    border: 0px solid #5490F5;
+    background: rgba(84, 144, 245, 0.20);
 }
 
-.vcard2{
-border: 0px solid #09A15C;
-background: #C6E4D6;
+.vcard2 {
+    border: 0px solid #09A15C;
+    background: #C6E4D6;
 
 }
 
-.vcard3{
-border: 0px solid #FFC239;
-background: #F7EBCF;
+.vcard3 {
+    border: 0px solid #FFC239;
+    background: #F7EBCF;
 }
+
+.v1-btn{
+background: #5490F5;
+}
+
+.v2-btn{
+    background: #09A15C;
+}
+.v3-btn{
+
+    background: #FFC239;
+}
+
+/* quote  */
+
+.quote {
+
+    padding: 50px 25px;
+    border-radius: 16px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    background: #FFF;
+    background-image: url(./assets/quote-bg.png);
+    background-repeat: no-repeat;
+    background-position-x: 25px;
+}
+
+/* recent news */
+
+.news-card {
+    display: flex;
+    padding: 48px;
+    align-items: center;
+    gap: 32px;
+    border-radius: 24px;
+    background: #FFF;
+
+    margin-bottom: 25px;
+}
+
+.news-img {
+    border-radius: 24px;
+
+
+}
+
+.footer-title,
+.news-title {
+    color: rgba(14, 14, 14, 0.80);
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.news-card2 {
+    flex-direction: row-reverse;
+}
+
+/* Donate section */
+
+.donate {
+    text-align: center;
+    padding: 0 auto;
+}
+
+.donate-card-container {
+    display: flex;
+    gap: 25px;
+    margin-bottom: 40px;
+
+
+}
+
+.donate-card {
+    color: rgba(14, 14, 14, 0.80);
+    font-size: 40px;
+    font-weight: 700;
+    padding: 40px;
+
+    border-radius: 16px;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    background: #FFF;
+    margin: 0px auto;
+}
+
+.donate-card2 {
+    background: #C6E4D6;
+
+}
+
+.donate-input {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 10px;
+    margin: 0 auto;
+
+}
+
+#donate-field {
+    width: 1032px;
+    padding: 20px 40px;
+    margin: 0 auto;
+    border: none;
+    text-align: center;
+}
+
+
+/* newsletter */
+
+
+.newsletter {
+    padding: 80px 100px;
+    border-radius: 24px;
+    background: #C6E4D6;
+    text-align: center;
+
+}
+
+#news-mail {
+    width: 600px;
+    padding: 18px 40px;
+    border-radius: 8px 0px 0px 8px;
+    background: #FFF;
+  border: none;
+}
+
+
+.news-btn {
+    height: 50px;
+    width: auto;
+    border-radius: 0px 8px 8px 0px;
+}
+
+
+/* footer-section */
+
+footer{
+    background: #FFF;
+    display: flex;
+    flex-direction: column;
+    gap:30px ;
+    justify-content: center;
+    align-items: center;
+    padding: 50px;
+
+
+}
+
+.horizontal-line{
+
+    height: 1px;
+    background: rgba(14, 14, 14, 0.10);
+    width: 80%;
+}
+
+.footer-img-container{
+    display: flex;
+    gap: 20px;
+}
+
+
