--- a/style.css
+++ b/style.css
@@ -201,6 +201,59 @@ background: #5490F5;
     background-position-x: 25px;
 }
 
+
+
+
+/* your opinion*/
+
+.table-container {
+    overflow-x: auto;
+    background-color: #fff;
+    padding: 40px;
+    border-radius: 16px;
+    
+  }
+  
+  .opinion-table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+  }
+  
+  .opinion-table thead {
+    background-color: #C6E4D6;
+  }
+  
+  .opinion-table th,
+  .opinion-table td {
+    padding: 15px;
+    text-align: left;
+    font-size: 16px;
+    border-bottom: 1px solid #ddd;
+  }
+  
+  .opinion-table th {
+    font-weight: bold;
+  }
+  
+  .opinion-dropdown {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+     background-color: #C6E4D6;
+  }
+  
+  .opinion-dropdown:focus {
+    border-color: #006A50;
+    outline: none;
+  }
+
+  
+
+
+
 /* recent news */
 
 .news-card {
